# HacksterIO

./: .gitmodules  Makefile  README.md
SPIQuadCopter/: .gitignore  72MHZ_PLL.md  BLHELI_PASSTHROUGH.md  BUILD.md  BUILD_AND_PROGRAM.md  CMakeLists.txt  HARDWARE_PINS.md  INDEX.md  INSTALL_OSS_CAD.md  LED_BLINKER.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.txt  SYSTEM_OVERVIEW.md  WISHBONE_BUS.md  WISHBONE_INTEGRATION.md  build.sbt  build.sh  debug_output.txt  run_tui.sh  tang9k.cst  tang9k_timing.sdc  tb_design.vvp  version_debug_3.txt  version_test_output.txt  version_test_output_2.txt  wb_serial_dshot_mux_tb.vcd  wb_version_tb
SPIQuadCopter/ArtS7-50/: .gitignore  ESC_UART_CONNECTION.md  VIVADO_BUILD_GUIDE.md  arty_s7_spi_copter_top.v  axi_esc_uart.v  spi_slave_wb_bridge_wrapper.v  uart_tx_enable_gen.v
SPIQuadCopter/TangNano20K/: pll.sv  tangnano20k.cst  tangnano20k_timing.sdc  tangnano20k_top.sv
SPIQuadCopter/_build/default/: hardware.fs  hardware.json  hardware.pnr  hardware.pnr.json
SPIQuadCopter/cmake/: artys7.cmake  tangnano20k.cmake
SPIQuadCopter/docs/: BLHELI_PASSTHROUGH.md  BLHELI_QUICKSTART.md  BUILD_AND_PROGRAM.md  ESC_COMMUNICATION_PROTOCOL.md  HALF_DUPLEX_UART_TECHNICAL.md  HARDWARE_PINS.md  IMPLEMENTATION_OPTIONS.md  INDEX.md  INSTALL_OSS_CAD.md  PINOUT.md  PLATFORM_MODULARIZATION.md  PROJECT_SUMMARY.md  README.md  SERIAL_BYPASS_DESIGN.md  SPI_SLAVE_WB_BRIDGE_DESIGN.md  START_HERE.txt  SYSTEM_OVERVIEW.md  TESTBENCH_README.md  TIMING_OPTIMIZATION.md  WISHBONE_BUS.md  WISHBONE_INTEGRATION.md  system_architecture.md  system_block_diagram.md  system_block_diagram.puml  system_block_diagram.txt
SPIQuadCopter/dshot/: DSHOT_PROTOCOL.md  Makefile  dshot_encoder.py  dshot_mailbox.sv  dshot_out.v  dshot_speed_test.v  dshot_tb.v  speed_switching_example.py
SPIQuadCopter/examples-archived/: README.md
SPIQuadCopter/firmware/: CMakeLists.txt  firmware.mem  riscv32-toolchain.cmake
SPIQuadCopter/firmware/include/: FreeRTOSConfig.h  fourway.hpp  msp_bridge.hpp  msp_loop.hpp  wb_regs.h
SPIQuadCopter/firmware/scripts/: bin2coe.py  bin2mem.py  crt0.S  link.ld
SPIQuadCopter/firmware/src/: fourway.cpp  main.cpp  msp_bridge.cpp  msp_loop.cpp  syscalls.cpp
SPIQuadCopter/neoPXStrip/: Makefile  neopixels.v  sendPx.v  sendPx_axis_flexible.sv  tb_neopixels  tb_neopixels.v  tb_sendPX.sv  tb_wb  tb_wb.sv  wb_neoPx.v  wb_neoPx_tb  wb_neoPx_tb.v
SPIQuadCopter/pwmDecoder/: Makefile  README.md  pwmdecoder.v  pwmdecoder_tb.v  pwmdecoder_wb.v
SPIQuadCopter/python/: Tang9K_imgui.ini
SPIQuadCopter/python/MSP/: TESTING_GUIDE.md  serialMSP.py  serialMSP_README.md
SPIQuadCopter/python/comm_proto/: __init__.py
SPIQuadCopter/python/gui-python-env/: pyvenv.cfg
SPIQuadCopter/python/imguTestApp/: BRIDGE_README.md  Frame_Dropper.ini  README.md  __init__.py  requirements-imgui.txt  tang9k_imgui.py  thread_bridge.py
SPIQuadCopter/python/tcpSPIBridge/: tcpSPIBridge.py
SPIQuadCopter/python/test/: BLHELI_PASSTHROUGH_SETUP.md  HALF_DUPLEX_SERIAL.md  README.md  TANG9K_LIBRARY.md  TUI_UPDATES.md  example_tang9k.py  requirements.txt  setup.sh  tang9k.py  test_rich_text.py
SPIQuadCopter/python/tuiExample/: README.md  motor_test_spi.py  msp_debug.py  msp_serial_tester.py  testNeoPixel.py  testVersion.py  test_spi_loopback.py  test_version_stress.py  tui_app.py  tui_app_serial_addon.py  tui_textual_minimal.py  wb_driver.py
SPIQuadCopter/python/tuiTest/: BLHELI_PASSTHROUGH_SETUP.md  ESC_CONFIGURATOR_WEBAPP.md  HALF_DUPLEX_SERIAL.md  TANG9K_LIBRARY.md  USB_SERIAL_BRIDGE.md  blheli_passthrough.py  tang9k_tui.py  test_hex_dump.py  test_socat.py
SPIQuadCopter/python/unitTests/: test_bridge_integration.py  test_thread_bridge.py  test_thread_bridge_more.py  test_waterfall_and_errors.py
SPIQuadCopter/scripts/: check_oss_suite_version.sh  generate_vexriscv.sh  install_dev_tools.sh  install_local_tools.sh  install_riscv_toolchain.sh
SPIQuadCopter/scripts/udev/: 50-stm32-dfu.rules  99-openfpgaloader.rules
SPIQuadCopter/serv/: .gitignore  Makefile  elf-size.sh
SPIQuadCopter/serv/firmware/: CMakeLists.txt  README.md  crt0.S  firmware.elf  firmware.hex  firmware.mem  fourway.cpp  fourway.hpp  hex2mem.py  link.ld  main.cpp  msp_bridge.c  msp_bridge.cpp  msp_bridge.h  msp_bridge.hpp  msp_loop.cpp  msp_loop.hpp  syscalls.c  version.h.in  wb_regs.h
SPIQuadCopter/serv/obj_dir/: Vserv_tb_top  Vserv_tb_top.cpp  Vserv_tb_top.h  Vserv_tb_top.mk  Vserv_tb_top__ALL.cpp  Vserv_tb_top__ALL.d  Vserv_tb_top__Syms.h  Vserv_tb_top__Syms__Slow.cpp  Vserv_tb_top__TraceDecls__0__Slow.cpp  Vserv_tb_top__Trace__0.cpp  Vserv_tb_top__Trace__0__Slow.cpp  Vserv_tb_top___024root.h  Vserv_tb_top___024root__0.cpp  Vserv_tb_top___024root__0__Slow.cpp  Vserv_tb_top___024root__Slow.cpp  Vserv_tb_top__pch.h  Vserv_tb_top__ver.d  Vserv_tb_top_classes.mk  serv_tb.d
SPIQuadCopter/serv/rtl/: mode_reg.v  (+3 more)
SPIQuadCopter/sim/: CMakeLists.txt  sim_firmware.c  sim_main.cpp  system_tb.sv
SPIQuadCopter/spiSlave/: Makefile  spi_slave.sv  spi_slave_tb.sv  spi_slave_tb.vcd  spi_slave_tb.vvp
SPIQuadCopter/src/: Makefile  Makefile.bak  Makefile.passthrough_tb  Makefile.wb_mux_tb  TESTBENCH_README.md  common_serv_spi_top.sv  common_vexriscv_spi_top.sv  coredesign.sv  four_way_handler.sv  led_blinker.sv  led_blinker_tb.sv  msp_handler.sv  msp_protocol_tb.sv  pll.sv  pll.vvp  run_passthrough_tb.sh  run_wb_mux_tb.sh  shared_buffer_ram.sv  spi_axis_adapter.sv  spi_slave_wb_bridge.sv  spi_wb_master.sv  tang9k_top.sv  uart_passthrough_bridge.sv  uart_passthrough_bridge_tb.gtkw  uart_passthrough_bridge_tb.sv  uart_rx.sv  uart_tx.sv  wb_debug_uart.sv  wb_dshot_controller.sv  wb_dshot_mailbox.sv  wb_dshot_mailbox_complex.sv  wb_esc_uart.sv  wb_led_controller.sv  wb_mux_5.v  wb_mux_7.v  wb_neoPxString.sv  wb_ram.sv  wb_reg_mirror.sv  wb_serial_dshot_mux.sv  wb_serial_dshot_mux_tb.sv  (+6 more)
SPIQuadCopter/tb/: design_tb.sv  tang9k_top_tb.gtkw  tang9k_top_tb.sv
SPIQuadCopter/tools/: Makefile
SPIQuadCopter/ttlSerial/: Makefile  README.md  ttl_serial.sv  ttl_serial_tb.sv
SPIQuadCopter/version/: wb_version_tb.sv
(+759 files in other folders)
